# python-design-patterns

./: .flake8  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: tests.yml
behavioral/: README.md  __init__.py
behavioral/command/: README.md  __init__.py  pattern.py  real_world_example.py  test_pattern.py
behavioral/iterator/: README.md  __init__.py  pattern.py  real_world_example.py  test_pattern.py
behavioral/mediator/: README.md  __init__.py  pattern.py  real_world_example.py  test_pattern.py
behavioral/memento/: README.md  __init__.py  pattern.py  real_world_example.py  test_pattern.py
behavioral/observer/: README.md  __init__.py  pattern.py  real_world_example.py  test_pattern.py
behavioral/state/: README.md  __init__.py  pattern.py  real_world_example.py  test_pattern.py
behavioral/strategy/: README.md  __init__.py  pattern.py  real_world_example.py  test_pattern.py
behavioral/visitor/: README.md  __init__.py  pattern.py  real_world_example.py  test_pattern.py
creational/: README.md  __init__.py
creational/abstract_factory/: README.md  __init__.py  pattern.py  real_world_example.py  test_pattern.py
creational/builder/: README.md  __init__.py  pattern.py  real_world_example.py  test_pattern.py
creational/factory/: README.md  __init__.py  pattern.py  real_world_example.py  test_pattern.py
creational/prototype/: README.md  __init__.py  pattern.py  real_world_example.py  test_pattern.py
creational/singleton/: README.md  __init__.py  pattern.py  real_world_example.py  test_pattern.py
docs/: ARCHITECTURE.md  DEVELOPMENT.md  FAQ.md  GETTING_STARTED.md  PATTERNS_OVERVIEW.md
structural/: README.md  __init__.py
structural/adapter/: README.md  pattern.py  real_world_example.py  test_pattern.py
structural/bridge/: README.md  pattern.py  real_world_example.py  test_pattern.py
structural/composite/: README.md  pattern.py  real_world_example.py  test_pattern.py
structural/decorator/: README.md  pattern.py  real_world_example.py  test_pattern.py
structural/facade/: README.md  pattern.py  real_world_example.py  test_pattern.py
structural/flyweight/: README.md  pattern.py  real_world_example.py  test_pattern.py
structural/proxy/: README.md  pattern.py  real_world_example.py  test_pattern.py
